# llm-experiments

./: CLAUDE.md  README.md  pyproject.toml
examples/support_ticket_triage/: README.md  canary_set.jsonl  eval_results_sonnet_2f4ccee3.json  eval_results_sonnet_3995a6b3.json  eval_results_sonnet_5572a671.json  eval_results_sonnet_900b30c1.json  eval_results_sonnet_fae2a3b2.json  gold_set.jsonl  run_example.py  task_spec.md
infra/: airflow_dag.py
infra/ci/: github_actions.yml
infra/docker/: Dockerfile  docker-compose.yml
src/config/: model_pins.yml  models.yml  perspectives.yml  prompt_graph.yml
src/data/: canary_set.jsonl  gold_set.jsonl
src/data/kb/: README.md
src/eval/: eval_runner.py  eval_spec.md  llm_judge.py  metrics.py
src/llm/: anthropic_client.py  bedrock_client.py  mock_client.py  run_inference.py  tracing.py
src/prompts/: judge_prompt.txt  prompt_changelog.md  prompt_v001.txt  synthesis_prompt.txt  task_spec.md  triage_v001.txt
src/services/: api_service.py  pipeline_task.py
tests/: test_eval_runner.py  test_prompts.py
